resolve merge conflicts.